# throughline

./: .env.example.compose  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  install.py  mkdocs.yml  pyproject.toml  requirements.txt
.claude/skills/rodix-design-system/: SKILL.md  component-patterns.md  illustration-guide.md  microcopy-patterns.md  sample-passages.md  visual-tokens.json  voice-guide.md
.claude/skills/rodspan-design-system/: SKILL.md  component-patterns.md  illustration-guide.md  microcopy-patterns.md  sample-passages.md  visual-tokens.json  voice-guide.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/scripts/: sync_docs.sh
.github/workflows/: codeql.yml  docs.yml  test.yml
config/: .env.example  README.md  contexts_topics.example.json  forbidden_prefixes.example.json  taxonomy.example.py  taxonomy.minimal.py
config/launchd/: com.example.throughline.filter-autopush.plist  com.example.throughline.rag-server.plist  com.example.throughline.refine-daemon.plist  com.example.throughline.reflection-pass.plist  com.example.throughline.sync.plist
config/systemd/: throughline-rag-server.service  throughline-refine-daemon.service  throughline-reflection-pass.service  throughline-reflection-pass.timer
daemon/: README.md  budget.py  card_body_parser.py  dials.py  notify.py  open_threads.py  pack_source_model_guard.py  refine_daemon.py  reflection_explain.py  reflection_inspect.py  reflection_pass.py  state_paths.py  taxonomy.py  taxonomy_observer.py  writeback.py  writeback_commit.py
docs/: ALPHA_USER_NOTES.md  ARCHITECTURE.md  CHINESE_STRIP_LOG.md  CLAIM_STANCE_SCORING.md  DEPLOYMENT.md  DESIGN_DECISIONS.md  DEV_LAN_ACCESS.md  FAQ.md  FILTER_BADGE_REFERENCE.md  MARKETING-MOVED.md  MCP_SETUP.md  ONBOARDING_DATA_IMPORT.md  PHASE_6_CHECKLIST.md  POSITION_METADATA_SCHEMA.md  REFLECTION_LAYER_DESIGN.md  REFLECTION_LAYER_USER_GUIDE.md  RUNTIME_STATE_FILES.md  TAXONOMY_GROWTH_DESIGN.md  TESTING.md  THREAT_MODEL.md  TOPIC_CLUSTERING_EXPERIMENT.md  WIZARD_DESIGN.md  rodix-friends-intro.md  rodspan-friends-intro-cherry-audience.draft.md  rodspan-friends-intro-friend-audience.draft.md  rodspan-friends-intro.diff-notes.md
docs/superpowers/: 2026-05-01-session-handoff.md
docs/superpowers/_state/: rodc-context.md
docs/superpowers/brand/: archetype-analysis-brainstorm-based.md  archetype-analysis.md  brand-book-v1-brainstorm-based.md  (+13 more)
evals/tool-triggering/: README.md  run_eval.py
filter/: README.md  openwebui_filter.py
fixtures/phase6/: H1_ANALYSIS.md  H3_ANALYSIS.md  PHASE6_OVERNIGHT_REPORT.md  SESSION_STATE.md  fuzz_inlet.py  fuzz_inlet_results.json  h1_results.json  h2_results.json  h3_code_results.json  h3_haiku_results.json  h4_results.md  injection_en.jsonl  pronouns_en.jsonl  recall_judge_en.jsonl  refiner_en.jsonl  retry_h3_errors.py  run_h1.py  run_h2.py  run_h3_code.py  run_h3_haiku.py  test_h3_delimiter_injection.py  test_m4_point_id.py  test_phase6.py  v0.1.0_release_notes.md
fixtures/v0_2_0/: test_active_provider.py  test_adapter_to_daemon.py  test_adapters_chatgpt.py  test_adapters_claude.py  test_adapters_gemini.py  test_anthropic_adapter.py  test_budget.py  test_card_body_parser.py  test_claim_extraction_prompt.py  test_claim_schema.py  test_cold_start.py  test_compose.py  test_config_migration.py  test_config_schema_validation.py  test_cost_dashboard.py  test_daemon_import_surface.py  test_daemon_llm_integration.py  test_derive_taxonomy.py  test_dials.py  test_doc_drift.py  test_doctor.py  test_drift_detector.py  test_drift_judge.py  test_embedders.py  test_llm_drift_segmenter.py  test_llm_extractor.py  test_llm_judge.py  test_llm_namer.py  test_llm_providers.py  test_mcp_server_check_consistency.py  test_mcp_server_doctor_and_wait.py  test_mcp_server_find_loose_ends.py  test_mcp_server_find_open_threads.py  test_mcp_server_get_position_drift.py  test_mcp_server_list_topics.py  test_mcp_server_recall_memory.py  test_mcp_server_save_conversation.py  test_mcp_server_save_refined_card.py  test_mcp_server_scaffold.py  test_mcp_server_throughline_status.py  (+40 more)
mcp_server/: README.md  __init__.py  __main__.py  claim_schema.py  clustering_accuracy.py  clustering_experiment.py  config.py  daemon_writer.py  doctor.py  drift_detector.py  llm_drift_segmenter.py  llm_extractor.py  llm_judge.py  llm_namer.py  position_state.py  pyproject.toml  rag_client.py  server.py  taxonomy_reader.py  topic_clustering.py
mcp_server/tools/: __init__.py  check_consistency.py  find_loose_ends.py  find_open_threads.py  get_position_drift.py  list_topics.py  recall_memory.py  save_conversation.py  save_refined_card.py  throughline_status.py
packs/: README.md  __init__.py  pack_runtime.py
packs/pte/: pack.yaml  refiner.md  skeleton.md  slicer.md
prompts/: README.md
prompts/en/: claim_extraction.md  drift_judge.md  echo_judge.md  ephemeral_judge.md  extension_judge.md  recall_judge.md  refine.md  refiner.deep.claude.md  refiner.deep.generic.md  refiner.normal.claude.md  refiner.normal.generic.md  refiner.rag_optimized.claude.md  refiner.rag_optimized.generic.md  refiner.skim.claude.md  refiner.skim.generic.md  route_domain.md  route_subpath.md  slice.md  taxonomy_deriver.main.claude.md  taxonomy_deriver.main.generic.md
prompts/zh/: .gitkeep
rag_server/: README.md  embedders.py  rag_server.py  rerankers.py  vector_stores.py
samples/: README.md  claude_sample.jsonl  demo_wizard_ui.py  record_wizard_demo.sh
scripts/: README.md  derive_taxonomy.py  ingest_qdrant.py  uninstall.ps1  uninstall.sh
throughline_cli/: __init__.py  __main__.py  active_provider.py  anthropic_adapter.py  config.py  cost.py  doctor.py  llm.py  prompts.py  providers.py  refine.py  stats.py  taxonomy.py  ui.py  uninstall.py  wizard.py
throughline_cli/adapters/: __init__.py  chatgpt_export.py  claude_export.py  common.py  gemini_takeout.py
(+245 files in other folders)
