# Project metadata for `pip install -e .` and (eventually) PyPI.
#
# v0.2.x: not published to PyPI yet — installs are git clone + venv +
# `pip install -r requirements.txt`. This file enables `pip install -e .`
# for contributors who want console-script entry points (`throughline-*`)
# without a separate alias setup.
#
# v0.3.x: planned PyPI release. The author needs to claim the
# `throughline` namespace + set up trusted publishing first; see
# https://github.com/jprodcc-rodc/throughline/issues for the tracking
# ticket.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "throughline"
version = "0.2.0"
description = "Turn every LLM conversation into searchable, self-growing personal knowledge. OpenWebUI → refine → Obsidian vault → RAG."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "jprodcc-rodc" },
]
keywords = [
    "openwebui", "obsidian", "rag", "llm",
    "personal-knowledge-management", "qdrant", "bge-m3",
    "knowledge-graph", "self-hosted",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Minimum runtime: the wizard + daemon + adapters. Heavy backends
# (torch / transformers / openai / chromadb) install via extras so a
# user picking the cloud-only path doesn't pay the bge-m3 download tax.
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "watchdog>=3.0",
    "rich>=13.0",
    "markdownify>=0.11",
    # Wizard arrow-key picker (Tier-1 UX). Falls back to legacy
    # numbered-input path on non-TTY (CI / pytest / piped stdin) so
    # the dep is OPTIONAL at runtime — but listed as a default
    # because every interactive install benefits from it.
    "questionary>=2.0",
]

[project.optional-dependencies]
# Local bge-m3 embedder + cross-encoder reranker. ~4.6 GB model
# download on first use.
local = [
    "torch>=2.0",
    "transformers>=4.40",
]
# Cloud embeddings + ingest_qdrant.py (uses the OpenAI-compatible
# /v1/embeddings shape).
openai = [
    "openai>=1.0",
]
# Alternate VECTOR_STORE backend (server-based).
chroma = [
    "chromadb>=0.5",
]
# Alternate VECTOR_STORE backend (embedded, zero-server, file-based).
lancedb = [
    "lancedb>=0.6",
    "pyarrow>=14",
]
# Alternate VECTOR_STORE backend (single SQLite file + loadable extension;
# lightest-weight credible vector backend — runs on a Raspberry Pi).
sqlite-vec = [
    "sqlite-vec>=0.1",
]
# Alternate VECTOR_STORE backend (DuckDB + community VSS extension —
# best fit when DuckDB is already in the analytics stack).
duckdb-vss = [
    "duckdb>=0.10",
]
# Alternate VECTOR_STORE backend (Postgres + pgvector extension — for
# teams that already operate Postgres and want vectors in the same DB).
# Requires `CREATE EXTENSION IF NOT EXISTS vector` once per database.
pgvector = [
    "psycopg[binary]>=3.1",
]
# MCP server form — exposes throughline as Model Context Protocol
# tools, so any MCP-aware client (Claude Desktop, Claude Code, Cursor,
# Continue.dev) can save/recall conversations against the same vault
# without OpenWebUI in the loop. See `mcp_server/` for the server
# code + `mcp_server/pyproject.toml` for the independent
# `throughline-mcp` PyPI package metadata, and `docs/MCP_SETUP.md`
# for client config.
#
# `pip install throughline[mcp]` is now a thin transitive install:
# it pulls in `throughline-mcp` which carries the actual mcp_server
# code + fastmcp dep. Phase 1.5 (2026-04-28) split deprecates the
# old "mcp_server bundled inside throughline + extras flag for
# fastmcp" path; the new shape lets users do `pip install
# throughline-mcp` directly and signals more clearly that MCP is
# its own access surface.
mcp = [
    "throughline-mcp>=0.1",
]
# Convenience: install everything (full local-only path).
all = [
    "torch>=2.0",
    "transformers>=4.40",
    "openai>=1.0",
    "chromadb>=0.5",
    "lancedb>=0.6",
    "pyarrow>=14",
    "sqlite-vec>=0.1",
    "duckdb>=0.10",
    "psycopg[binary]>=3.1",
    "uvicorn[standard]>=0.27",
    "throughline-mcp>=0.1",
]
# Test + lint dev tooling.
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.urls]
Homepage      = "https://github.com/jprodcc-rodc/throughline"
Repository    = "https://github.com/jprodcc-rodc/throughline"
Documentation = "https://github.com/jprodcc-rodc/throughline#readme"
Issues        = "https://github.com/jprodcc-rodc/throughline/issues"
Changelog     = "https://github.com/jprodcc-rodc/throughline/blob/main/CHANGELOG.md"
Roadmap       = "https://github.com/jprodcc-rodc/throughline/blob/main/ROADMAP.md"

[project.scripts]
# Console entry points so `pip install -e .` users get a flat command
# surface instead of `python -m throughline_cli ...`.
throughline-install   = "throughline_cli.wizard:main"
throughline-import    = "throughline_cli.adapters:main"
throughline-taxonomy  = "throughline_cli.taxonomy:main"
throughline-doctor    = "throughline_cli.doctor:main"
throughline-uninstall = "throughline_cli.uninstall:main"
throughline-cost      = "throughline_cli.cost:main"
throughline-stats     = "throughline_cli.stats:main"

# =========================================================
# setuptools — what to package
# =========================================================
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# Top-level Python packages that ship with the throughline install.
# `mcp_server*` is excluded here — it ships in the separate
# `throughline-mcp` PyPI package built from `mcp_server/pyproject.toml`.
# A user who runs `pip install throughline[mcp]` gets `throughline-mcp`
# as a transitive dep, so the mcp_server code lands on disk via
# that path; `pip install throughline` alone gets the OpenWebUI
# Filter form's runtime + the wizard, but no MCP server.
include = ["throughline_cli*", "daemon*", "rag_server*", "packs*"]
# Things that are NOT packages: tests, fixtures, scripts, samples,
# the standalone Filter file, the docs, the separate mcp_server pkg.
exclude = ["fixtures*", "tests*", "docs*", "mcp_server*"]

[tool.setuptools.package-data]
# Prompt files + bundled samples ship inside the wheel.
"throughline_cli" = ["py.typed"]
"*" = ["*.md", "*.yml", "*.yaml"]

# =========================================================
# Tool config
# =========================================================
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Permissive on purpose — see CONTRIBUTING.md §house style.
# v0.3 may widen to E + W + I once style debt is addressed.
select = ["F", "E9"]

[tool.pytest.ini_options]
# Tests live under fixtures/ for historical reasons (Phase 6 audit
# was the seed). Pytest's default test discovery would walk the
# whole repo; keep it scoped.
testpaths = ["fixtures"]
python_files = ["test_*.py"]
addopts = "-q --tb=short"
# Markers registered to silence "PytestUnknownMarkWarning". Anything
# tagged `integration` is opt-in only (e.g., `RUN_INTEGRATION=1` env
# guard) so default `pytest` runs stay fast + offline.
markers = [
    "integration: opt-in tests that hit real services (LLM provider, etc.). Skipped by default.",
]
